tests/baselines/reference/sourceMapValidationFor.errors.txt
tests/cases/compiler/sourceMapValidationFor.ts(32,21): error TS2695: Left side of comma operator is unused and has no side effects.


==== tests/cases/compiler/sourceMapValidationFor.ts (1 errors) ====
    for (var i = 0; i < 10; i++) {
        WScript.Echo("i: " + i);
    }
    for (i = 0; i < 10; i++)
    {
        WScript.Echo("i: " + i);
    }
    for (var j = 0; j < 10; ) {
        j++;
        if (j == 1) {
            continue;
        }
    }
    for (j = 0; j < 10;)
    {
        j++;
    }
    for (var k = 0;; k++) {
    }
    for (k = 0;; k++)
    {
    }
    for (; k < 10; k++) {
    }
    for (;;) {
        i++;
    }
    for (;;)
    {
        i++;
    }
    for (i = 0, j = 20; j < 20, i < 20; j++) {
                        ~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    }